--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* remove for site speed, keep for coding comfort */
+* {
+	background-repeat:no-repeat;
+}
+
 /* WordPress Required Styles */
 .aligncenter {
 	display: block;
