--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 502;
+  z-index: 1042;
   overflow: hidden;
   position: fixed;
   background: #0b0b0b;
@@ -16,13 +16,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 503;
+  z-index: 1043;
   position: fixed;
   outline: none !important;
   -webkit-backface-visibility: hidden; }
 
 .mfp-container {
-  height: 100%;
   text-align: center;
   position: absolute;
   width: 100%;
@@ -48,7 +47,8 @@
   display: inline-block;
   vertical-align: middle;
   margin: 0 auto;
-  text-align: left; }
+  text-align: left;
+  z-index: 1045; }
 
 .mfp-inline-holder .mfp-content,
 .mfp-ajax-holder .mfp-content {
@@ -85,7 +85,7 @@
   display: none; }
 
 .mfp-hide {
-  display: none; }
+  display: none !important; }
 
 .mfp-preloader {
   color: #cccccc;
@@ -95,7 +95,8 @@
   text-align: center;
   margin-top: -0.8em;
   left: 8px;
-  right: 8px; }
+  right: 8px;
+  z-index: 1044; }
 
 .mfp-preloader a {
   color: #cccccc; }
@@ -117,7 +118,10 @@ button.mfp-arrow {
   border: 0;
   -webkit-appearance: none;
   display: block;
-  padding: 0; }
+  padding: 0;
+  z-index: 1046;
+  -webkit-box-shadow: none;
+  box-shadow: none; }
 
 button::-moz-focus-inner {
   padding: 0;
@@ -164,7 +168,6 @@ button::-moz-focus-inner {
 
 .mfp-arrow {
   position: absolute;
-  top: 0;
   opacity: 0.65;
   margin: 0;
   top: 50%;
@@ -193,37 +196,37 @@ button::-moz-focus-inner {
   top: 0;
   margin-top: 35px;
   margin-left: 35px;
-  border: solid transparent; }
+  border: medium inset transparent; }
 .mfp-arrow:after,
 .mfp-arrow .mfp-a {
-  opacity: 0.8;
-  border-top-width: 12px;
-  border-bottom-width: 12px;
+  border-top-width: 13px;
+  border-bottom-width: 13px;
   top: 8px; }
 .mfp-arrow:before,
 .mfp-arrow .mfp-b {
-  border-top-width: 20px;
-  border-bottom-width: 20px; }
+  border-top-width: 21px;
+  border-bottom-width: 21px; }
 
 .mfp-arrow-left {
   left: 0; }
   .mfp-arrow-left:after,
   .mfp-arrow-left .mfp-a {
-    border-right: 12px solid black;
-    left: 5px; }
+    border-right: 17px solid white;
+    margin-left: 31px; }
   .mfp-arrow-left:before,
   .mfp-arrow-left .mfp-b {
-    border-right: 20px solid white; }
+    margin-left: 25px;
+    border-right: 27px solid #3f3f3f; }
 
 .mfp-arrow-right {
   right: 0; }
   .mfp-arrow-right:after,
   .mfp-arrow-right .mfp-a {
-    border-left: 12px solid black;
-    left: 3px; }
+    border-left: 17px solid white;
+    margin-left: 39px; }
   .mfp-arrow-right:before,
   .mfp-arrow-right .mfp-b {
-    border-left: 20px solid white; }
+    border-left: 27px solid #3f3f3f; }
 
 .mfp-iframe-holder {
   padding-top: 40px;
@@ -242,7 +245,8 @@ button::-moz-focus-inner {
 
 .mfp-iframe-scaler iframe {
   position: absolute;
-  top: -3px;
+  display: block;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -250,7 +254,7 @@ button::-moz-focus-inner {
   background: black; }
 
 .mfp-iframe-holder .mfp-close {
-  top: -43px; }
+  top: -40px; }
 
 /* Main image in popup */
 img.mfp-img {
@@ -277,7 +281,8 @@ img.mfp-img {
   width: auto;
   height: auto;
   z-index: -1;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6); }
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+  background: #444444; }
 
 .mfp-figure {
   line-height: 0; }
@@ -293,7 +298,9 @@ img.mfp-img {
 .mfp-title {
   text-align: left;
   line-height: 18px;
-  color: #f3f3f3; }
+  color: #f3f3f3;
+  word-wrap: break-word;
+  padding-right: 36px; }
 
 .mfp-figure small {
   color: #bdbdbd;
@@ -355,7 +362,7 @@ img.mfp-img {
   .mfp-img-mobile .mfp-figure small {
     display: inline;
     margin-left: 5px; } }
-@media all and (max-width: 800px) {
+@media all and (max-width: 900px) {
   .mfp-arrow {
     -webkit-transform: scale(0.75);
     transform: scale(0.75); }
