--- a/css/override.css
+++ b/css/override.css
@@ -1,3 +1,12 @@
 a:hover, a{
     transition: color 0.3s  linear;
 }
+
+/* zoom effect */
+a img{
+	transition: all 0.4s ease 0s;
+}
+a:hover img{
+	transform: scale(1.15) rotate(-1.5deg);
+}
+
