--- a/css/override.css
+++ b/css/override.css
@@ -1,5 +1,7 @@
-/* remove for site speed, keep for coding comfort */
-* {
+*,*:before,*:after{
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing:border-box;
 	background-repeat:no-repeat;
 }
 
